tests/baselines/reference/privateNameJsBadAssignment.errors.txt
tests/cases/conformance/classes/members/privateNames/privaateNameJsBadAssignment.js(1,9): error TS2339: Property '#nope' does not exist on type 'typeof import("tests/cases/conformance/classes/members/privateNames/privaateNameJsBadAssignment")'.
tests/cases/conformance/classes/members/privateNames/privaateNameJsBadAssignment.js(3,13): error TS18016: Private identifiers are not allowed outside class bodies.
tests/cases/conformance/classes/members/privateNames/privaateNameJsBadAssignment.js(6,3): error TS2339: Property '#foo' does not exist on type 'typeof B'.
tests/cases/conformance/classes/members/privateNames/privaateNameJsBadAssignment.js(11,17): error TS2339: Property '#bar' does not exist on type 'typeof import("tests/cases/conformance/classes/members/privateNames/privaateNameJsBadAssignment")'.
tests/cases/conformance/classes/members/privateNames/privaateNameJsBadAssignment.js(12,14): error TS2339: Property '#foo' does not exist on type 'C'.


==== tests/cases/conformance/classes/members/privateNames/privaateNameJsBadAssignment.js (5 errors) ====
    exports.#nope = 1;           // Error (outside class body)
            ~~~~~
!!! error TS2339: Property '#nope' does not exist on type 'typeof import("tests/cases/conformance/classes/members/privateNames/privaateNameJsBadAssignment")'.
    function A() { }
    A.prototype.#no = 2;         // Error (outside class body)
                ~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    
    class B {}
    B.#foo = 3;                  // Error (outside class body)
      ~~~~
!!! error TS2339: Property '#foo' does not exist on type 'typeof B'.
    
    class C {
        #bar = 6;
        constructor () {
            exports.#bar = 6;    // Error
                    ~~~~
!!! error TS2339: Property '#bar' does not exist on type 'typeof import("tests/cases/conformance/classes/members/privateNames/privaateNameJsBadAssignment")'.
            this.#foo = 3;       // Error (undeclared)
                 ~~~~
!!! error TS2339: Property '#foo' does not exist on type 'C'.
        }
    }
    